--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
   <section class="services">
     <div class="container grid-3 center">
       <div>
-        <a href="#"><i class="fab fa-facebook fa-3x"></i></a>
+        <a href="https://www.facebook.com/dsawebdev"><i class="fab fa-facebook fa-3x"></i></a>
       </div>
       <div>
-        <a href="#"><i class="fab fa-github fa-3x"></i></a>
+        <a href="https://github.com/Blaqstar"><i class="fab fa-github fa-3x"></i></a>
       </div>
       <div>
-        <a href="#"><i class="fab fa-instagram fa-3x"></i></a>
+        <a href="https://www.instagram.com/dsandersonwebdev/"><i class="fab fa-instagram fa-3x"></i></a>
       </div>
       <div>
-        <a href="#"><i class="fab fa-behance fa-3x"></i></a>
+        <a href="https://www.behance.net/Blacstar"><i class="fab fa-behance fa-3x"></i></a>
       </div>
     </div>
   </section>
