--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> 
   <title>Devon Anderson|Web Designs</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/main.css">
@@ -11,7 +12,7 @@
 <body>
   <header class="showcase">
     <div class="content">
-      <img class="logo" src="/images/logo.svg" alt="DSA Logo">
+      <img class="logo" src="/images/dsa-lion-logo.svg" alt="DSA Logo">
 
       <div class="title">
         Welcome to Devon Anderson Web Designs
