--- a/index.html
+++ b/index.html
@@ -35,13 +35,16 @@
         <a href="https://www.facebook.com/dsawebdev"><i class="fab fa-facebook fa-3x"></i></a>
       </div>
       <div>
-        <a href="https://github.com/Blaqstar"><i class="fab fa-github fa-3x"></i></a>
+        <a href="https://github.com/dsawebdev"><i class="fab fa-github fa-3x"></i></a>
       </div>
       <div>
-        <a href="https://www.instagram.com/dsandersonwebdev/"><i class="fab fa-instagram fa-3x"></i></a>
+        <a href="https://www.instagram.com/dsawebdev"><i class="fab fa-instagram fa-3x"></i></a>
       </div>
       <div>
-        <a href="https://www.behance.net/Blacstar"><i class="fab fa-behance fa-3x"></i></a>
+        <a href="https://www.behance.net/dsawebdev"><i class="fab fa-behance fa-3x"></i></a>
+      </div>
+      <div>
+        <a href="https://www.linkedin.com/in/devon-s-anderson/"><i class="fab fa-linkedin fa-3x"></i></a>
       </div>
     </div>
   </section>
@@ -55,7 +58,7 @@
         </div>
         <div>
           <h3>About Me</h3>
-          <p>As I tend to the wounds of the burn marks of a non-creative corporate career. The conscious effort of this portfolio site will be to let you follow along in my journey, back to the path of pure creativity. I seek to invoke expressionism in my designs and gain an emotional experience rather than the norm and inmpression of what everyone else is doing.</p>
+          <p>As I tend to the wounds of the burn marks of a non-creative corporate career. The conscious effort of this portfolio site will be to open the doors as you follow along in my journey, back to the path of pure creativity and my passion for coding. I will seek to invoke expressionism in my designs and gain an emotional experience from all that I will learn from.</p>
         </div>
       </div>
     </div>
@@ -64,5 +67,7 @@
   <footer class="center bg-dark">
     <p>Devon Anderson Web Designs &copy; 2018</p>
   </footer>
+
+  <script src="/js/app.js"></script>
 </body>
 </html>
